Add second page

--- a/meccpma/pubspec.yaml
+++ b/meccpma/pubspec.yaml
@@ -28,6 +28,7 @@ flutter:
   assets:
     - assets/mec.png
     - assets/mec.jpg
+    - assets/mec_side.jpg
 
   fonts:
     - family: Times New Roman
