--- a/meccpma/pubspec.yaml
+++ b/meccpma/pubspec.yaml
@@ -4,6 +4,7 @@ description: A cross platform mobile application made with Flutter for Mahindra 
 dependencies:
   flutter:
     sdk: flutter
+  dictionary: "^0.2.4"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
