Add pages  - about.dart  - gallery.dart  - blog.dart  - social.dart  - login.dart  - help.dart
Make clickable cards and redirect to appropriate pages

--- a/meccpma/pubspec.yaml
+++ b/meccpma/pubspec.yaml
@@ -30,6 +30,7 @@ flutter:
     - assets/mec.png
     - assets/mec.jpg
     - assets/mec_side.jpg
+    - assets/outlook.png
 
   fonts:
     - family: Times New Roman
