--- a/meccpma/pubspec.yaml
+++ b/meccpma/pubspec.yaml
@@ -5,6 +5,8 @@ dependencies:
   flutter:
     sdk: flutter
   dictionary: "^0.2.4"
+  carousel: ^0.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -31,6 +33,13 @@ flutter:
     - assets/mec.jpg
     - assets/mec_side.jpg
     - assets/outlook.png
+    - assets/atmec.jpg
+    - assets/antiragging.jpg
+    - assets/tedx.jpg
+    - assets/mec1.jpg
+    - assets/mec2.jpg
+    - assets/mec3.jpg
+
 
   fonts:
     - family: Times New Roman
