--- a/meccpma/pubspec.yaml
+++ b/meccpma/pubspec.yaml
@@ -5,6 +5,7 @@ dependencies:
   flutter:
     sdk: flutter
   dictionary: "^0.2.4"
+  flutter_statusbarcolor: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
