--- a/meccpma/pubspec.yaml
+++ b/meccpma/pubspec.yaml
@@ -6,7 +6,7 @@ dependencies:
     sdk: flutter
   dictionary: "^0.2.4"
   flutter_statusbarcolor: any
-  carousel: ^0.1.0
+  image_carousel: "^0.4.1"
 
 
   # The following adds the Cupertino Icons font to your application.
