--- a/meccpma/pubspec.yaml
+++ b/meccpma/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   dictionary: "^0.2.4"
   flutter_statusbarcolor: any
   image_carousel: "^0.4.1"
+  flutter_custom_tabs: "^0.2.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +45,9 @@ flutter:
     - assets/31-March-1.1-min.jpg
     - assets/Civil-Engineering-min.jpg
     - assets/MEC_Blog_Header1.jpg
+    - assets/twitter.png
+    - assets/facebook.png
+    - assets/youtube.png
 
   fonts:
     - family: Times New Roman
