--- a/meccpma/pubspec.yaml
+++ b/meccpma/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   image_carousel: "^0.4.1"
   flutter_custom_tabs: "^0.2.0"
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -48,6 +49,11 @@ flutter:
     - assets/twitter.png
     - assets/facebook.png
     - assets/LinkedIn.png
+    - assets/r1.jpg
+    - assets/r2.jpg
+    - assets/r3.jpg
+    - assets/r4.jpg
+    - assets/r6.jpg
 
   fonts:
     - family: Times New Roman
